<resources>
    <string name="app_name">Shop</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>

    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>

    <string name="search">搜索</string>
    <string name="price">价格</string>
    <string name="titile">标题</string>
    <string name="shop">商城</string>
    <string name="no">加载中</string>
</resources>
